--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.w83ll43</groupId>
     <artifactId>OpenAPISDK</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>OpenAPISDK</name>
     <description>OpenAPISDK</description>
     <properties>
